styles/header.css
/* ... */
/* 1140px */

@media(max-width: 1140px) {
    .header__top-nav .container {
        padding: 11px 34px;
    }

    .menu__item {
        min-width: 164px;
    }

    .menu__sub-menu-item {
        min-width: 100%;
    }
    .burger-view.mobile-header_active::after {
        top: 9px;

        transform: rotate(-45deg);
        transition: .3s;
    }

    .burger-view.mobile-header_active::before {
        top: 9px;

        transform: rotate(45deg);
        transition: .3s;
    }

    .burger-view.mobile-header_active span {
        transform: scale(0);
        transition: .3s;
    }

    .burger-view {
        display: block;
    }

    .header__top-nav .header__button {
        display: none;
    }

    .menu-wrapper .header__button {
        display: block;
        margin: 20px auto 0;
        width: 100%;
    }

    .menu-wrapper .header__phone {
        color: #fff;
        text-decoration: none;
    }

    .submenu-mobile-active.menu__item_parent>a::after {
        display: none;
    }

    .header .menu-wrapper {
        position: absolute;
        opacity: 0;
        min-width: 250px;
        z-index: 4;
        padding: 30px 0;
        visibility: hidden;
        height:  calc(100vh - 84px);
        left: -100%;

        overflow-x: auto;
        transition: 0.5s;
    }

    .header.mobile-header_active .menu-wrapper {
        opacity: 1;
        visibility: visible;
        position: relative;
        width: 50%;
        left: 0;
        padding-bottom: 50px;

        transition: 0.5s;
    }

    .menu__sub-menu {
        width: 100%;
        left: -100%;
    }
    .menu__sub-sub-menu {
        left: -100%;
    }

    .header .menu-wrapper .container {
        flex-direction: column-reverse;
        align-items: flex-start;
        padding-bottom: 40px;
        
    }
    
    .header .menu-wrapper.submenu-mobile-active .container {
        position: absolute;
        top: 0;
        bottom: 0;
    }

    .search,
    .search .search__input {
        width: 100%;
    }
    
    header.mobile-header_active .menu-wrapper.submenu-mobile-active {
        padding: 0;
        /* height: 100vh; */
    }

    .menu-wrapper.submenu-mobile-active .order-popup,
    .menu-wrapper.submenu-mobile-active .header__phone-box,
    .menu-wrapper.submenu-mobile-active .header__phone_second,
    .menu-wrapper.submenu-mobile-active .search {
        display: none;
    }

    .header .menu {
        flex-direction: column;
        align-items: flex-start;
        margin: 20px 0;
        width: 100%;
        
    }
    
    .blackout.mobile-header_active {
        display: block;
        z-index: 4;

        transition: 0.3s;
    }

    .header__top-nav .header__phone_second {
        display: none;
    }

    .menu-wrapper .header__phone_second {
        display: block;
    }

    header.mobile-header_active .menu__item {
        position: inherit;
        width: 100%;
    }
    
    .menu__sub-menu.submenu-mobile-active {
        top: 0;
        left: 0;
        min-width: none;
        width: 100%;
        min-height: calc(100vh - 84px);
        z-index: 5;

        border-radius: 0;
        opacity: 1;
    }

    .submenu-mobile-active ul.sub-submenu-mobile-active {
        position: absolute;
        top: 0px;
        left: 0;
        padding: 60px 30px 15px 20px;
        min-height: calc(100vh - 84px);
        z-index: 6;
    }

    .menu__sub-menu.submenu-mobile-active {
        padding: 60px 15px 0 20px;
    } 

    .burger-view.submenu-mobile-active::before {
        width: 50%;
        top: 14px;

        transform: rotate(45deg);
    }

    .burger-view.submenu-mobile-active::after {
        width: 50%;
        top: 4px;

        transform: rotate(-45deg);
    }

    .burger-view.submenu-mobile-active span {
        transform: scale(0.8);
    }
     
    .menu__item.submenu-mobile-active>a {
        position: absolute;
        top: 0;
        left: 0;
        padding-left: 20px;
        z-index: 6;

        font-family: var(--bold);
        font-size: var(--text-20);

        color: var(--horses);
        text-transform: uppercase;
    }

    .menu__item .sub-submenu-mobile-active>a {
        position: absolute;
        top: 0px;
        left: 0;
        padding-left: 20px;
        z-index: 7;

        font-family: var(--bold);
        font-size: var(--text-20);

        color: var(--horses);
        text-transform: uppercase;
    }

    .menu__item.menu__item_parent.sub-submenu-mobile-active>a {
        display: none;
    }

    .menu__item .sub-submenu-mobile-active>a::after {
        display: none;
    }

    .menu__item a {
        font-size: var(--text-18);
    }

    .menu__item.submenu-mobile-active .menu__sub-menu {
        opacity: 1;
        visibility: visible;
        transition: 0.3s;
    }

    .submenu-mobile-active .menu .menu__item {
        display: none;

    }

    .submenu-mobile-active .menu .submenu-mobile-active {
        display: block;
    }

    body.mobile-header_active {
        overflow: hidden;
    }

    .menu__sub-menu a {
        padding-top: 19px;
    }

    .blackout {
        top: 82px;
    }

}
/* ... */

